--- a/Common.cfg
+++ b/Common.cfg
@@ -1,6 +1,6 @@
 NumberOfPreferredNeighbors 3
 UnchokingInterval 1
 OptimisticUnchokingInterval 2
-FileName file.jpg
-FileSize 1356098
+FileName File.png
+FileSize 4040787
 PieceSize 16384
