--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>Client</module>
+        <module>edu.ufl.cise.bytetorrent.Client</module>
         <module>Server</module>
     </modules>
 
