--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,71 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+    
+    <build>
+    <plugins>
+       <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-jar-plugin</artifactId>
+         <configuration>
+           <archive>
+             <manifest>
+               <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+               <addClasspath>true</addClasspath>
+               <classpathPrefix>lib/</classpathPrefix>
+               <mainClass>testlog4j.testlog4j.App</mainClass>
+             </manifest>
+           </archive>
+         </configuration>
+       </plugin>
+
+       <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-dependency-plugin</artifactId>
+         <version>2.5.1</version>
+         <executions>
+           <execution>
+             <id>copy-dependencies</id>
+             <phase>package</phase>
+             <goals>
+               <goal>copy-dependencies</goal>
+             </goals>
+             <configuration>
+               <outputDirectory>${project.build.directory}/lib/</outputDirectory>
+             </configuration>
+           </execution>
+         </executions>
+       </plugin>
+
+       <plugin>
+         <artifactId>maven-assembly-plugin</artifactId>
+         <version>2.4.1</version>
+
+         <configuration>
+           <descriptorRefs>
+             <descriptorRef>jar-with-dependencies</descriptorRef>
+           </descriptorRefs>
+           <archive>
+             <manifest>
+               <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+               <addClasspath>true</addClasspath>
+               <classpathPrefix>lib/</classpathPrefix>
+               <mainClass>testlog4j.testlog4j.App</mainClass>
+             </manifest>
+           </archive>
+         </configuration>
+         <executions>
+           <execution>
+             <id>make-assembly</id> <!-- this is used for inheritance merges -->
+             <phase>package</phase> <!-- bind to the packaging phase -->
+             <goals>
+               <goal>single</goal>
+             </goals>
+           </execution>
+         </executions>
+       </plugin>
+     </plugins>
+    </build>
 
     <dependencies>
         <dependency>
