--- a/Common.cfg
+++ b/Common.cfg
@@ -1,6 +1,6 @@
 NumberOfPreferredNeighbors 3
 UnchokingInterval 5
 OptimisticUnchokingInterval 10
-FileName thefile
-FileSize 2167705
-PieceSize 16384
+FileName File.png
+FileSize 4040787
+PieceSize 15384
