--- a/Common.cfg
+++ b/Common.cfg
@@ -1,6 +1,6 @@
 NumberOfPreferredNeighbors 3
 UnchokingInterval 15
 OptimisticUnchokingInterval 4
-FileName File.png
-FileSize 4040787
+FileName file2.jpg
+FileSize 17721603
 PieceSize 16384
